--- a/contact_me.html
+++ b/contact_me.html
@@ -97,22 +97,22 @@
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
       </a>
-      <span class="mb-3 mb-md-0 lead">© 2023 Antonio Giannino, Inc</span>
+      <span class="mb-3 mb-md-0 lead">©Gennaio 2023, Antonio Giannino, Inc</span>
     </div>
     
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3 fs-4">
-        <a href="https://it-it.facebook.com/">
+        <a target="_blank" href="https://it-it.facebook.com/">
           <i class="bi bi-facebook"></i>
         </a> 
       </li>
       <li class="ms-3 fs-4">
-        <a href="https://www.instagram.com/">
+        <a target="_blank" href="https://www.instagram.com/">
           <i class="bi bi-instagram"></i>
         </a>
       </li>
       <li class="ms-3 fs-4 hover pe-5">
-        <a href="https://it.linkedin.com/">
+        <a target="_blank" href="https://www.linkedin.com/in/antonio-gianfranco-giannino-3bb2a524a/">
           <i class="bi bi-linkedin"></i>
         </a>
       </li>
