--- a/contact_me.html
+++ b/contact_me.html
@@ -34,28 +34,28 @@
     <div class="container-fluid">
         <i class="bi bi-code-slash ps-2 me-5 fs-1"></i>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="bi bi-view-list"></i>
+            <i class="bi bi-view-list hover"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link fs-4 me-5" aria-current="page" href="./index.html">
-                        <i class="bi bi-house"></i>
+                        <i class="bi bi-house hover"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link fs-4 me-5" href="./project.html">
-                        <i class="bi bi-folder"></i>
+                        <i class="bi bi-folder hover"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link fs-4 me-5" href="./about_me.html">
-                        <i class="bi bi-person"></i>
+                        <i class="bi bi-person hover"></i>
                     </a>
                 </li>       
                 <li class="nav-item">
                     <a class="nav-link fs-4 me-2" href="./contact_me.html">
-                        <i class="bi bi-envelope"></i>
+                        <i class="bi bi-envelope hover"></i>
                     </a>
                 </li>
             </ul>
@@ -87,6 +87,9 @@
                 </label>
                 <textarea class="form-control navbar-custom borderhover" id="exampleFormControlTextarea1" rows="5" placeholder="{}"></textarea>
             </div>
+            <button class="btn btn-danger navbar-custom borderhover border-0 mt-3">
+              <i class="bi bi-envelope-paper fs-5 b"></i>
+            </button>
         </div>    
     </div>
 </div>
@@ -97,23 +100,23 @@
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
       </a>
-      <span class="mb-3 mb-md-0 lead">©Gennaio 2023, Antonio Giannino, Inc</span>
+      <span class="mb-3 mb-md-0 lead">©2023, Antonio Giannino, Inc</span>
     </div>
     
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3 fs-4">
         <a target="_blank" href="https://it-it.facebook.com/">
-          <i class="bi bi-facebook"></i>
+          <i class="bi bi-facebook hover"></i>
         </a> 
       </li>
       <li class="ms-3 fs-4">
         <a target="_blank" href="https://www.instagram.com/">
-          <i class="bi bi-instagram"></i>
+          <i class="bi bi-instagram hover"></i>
         </a>
       </li>
       <li class="ms-3 fs-4 hover pe-5">
-        <a target="_blank" href="https://www.linkedin.com/in/antonio-gianfranco-giannino-3bb2a524a/">
-          <i class="bi bi-linkedin"></i>
+        <a target="_blank" href="https://www.linkedin.com/in/antoniogiannino-webdeveloper/">
+          <i class="bi bi-linkedin hover"></i>
         </a>
       </li>
     </ul>
