--- a/about_me.html
+++ b/about_me.html
@@ -35,28 +35,28 @@
     <div class="container-fluid">
         <i class="bi bi-code-slash ps-2 me-5 fs-1"></i>
         <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="bi bi-view-list"></i>
+            <i class="bi bi-view-list hover"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link fs-4 me-5" aria-current="page" href="./index.html">
-                        <i class="bi bi-house"></i>
+                        <i class="bi bi-house hover"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link fs-4 me-5" href="./project.html">
-                        <i class="bi bi-folder"></i>
+                        <i class="bi bi-folder hover"></i>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link fs-4 me-5" href="./about_me.html">
-                        <i class="bi bi-person"></i>
+                        <i class="bi bi-person hover"></i>
                     </a>
                 </li>       
                 <li class="nav-item">
                     <a class="nav-link fs-4 me-2" href="./contact_me.html">
-                        <i class="bi bi-envelope"></i>
+                        <i class="bi bi-envelope hover"></i>
                     </a>
                 </li>
             </ul>
@@ -66,9 +66,10 @@
   
   <!-- HEADER -->
   <div class="containter">
-    <div class="row my-4 d-flex justify-content-around h-75">
+    <div class="row my-5 d-flex justify-content-around">
+      
       <div class="col-12 col-md-3 card navbar-custom my-4 borderhover">
-        <div class="card-header text-center mt-2">
+        <div class="card-header text-center mt-2 border-0">
           <i class="bi bi-person-square fs-1"></i>
         </div>
         <div class="card-body text-center">
@@ -76,11 +77,12 @@
           <p class="card-text lead">LUOGO DI NASCITA: Cerignola (FG)</p>
           <p class="card-text lead">DATA DI NASCITA: 30/11/1997</p>
           <p class="card-text lead">RESIDENZA: San Ferdinando di Puglia (BT)</p>
-          <a href="#" class="btn btn-outline-danger border-0 fs-3"><i class="bi bi-hand-thumbs-up"></i></a>
+          <a href="#" class="btn btn-outline-danger navbar-custom border-0 fs-3"><i class="bi bi-hand-thumbs-up"></i></a>
         </div>
       </div>
+
       <div class="col-12 col-md-3 card navbar-custom my-4 borderhover">
-        <div class="card-header text-center mt-2">
+        <div class="card-header text-center mt-2 border-0">
           <i class="bi bi-book fs-1"></i>
         </div>
         <div class="card-body text-center">
@@ -88,11 +90,12 @@
           <p class="card-text lead">DIPLOMA: Istituto dell'Aquila</p>
           <p class="card-text lead">ATTESTATO: ECDL</p>
           <p class="card-text lead">CORSI: Aulab Hackademy</p>
-          <a href="#" class="btn btn-outline-danger border-0 fs-3"><i class="bi bi-hand-thumbs-up"></i></a>
+          <a href="#" class="btn btn-outline-danger navbar-custom border-0 fs-3"><i class="bi bi-hand-thumbs-up"></i></a>
         </div>
       </div>
+
       <div class="col-12 col-md-3 card navbar-custom my-4 borderhover">
-        <div class="card-header text-center mt-2">
+        <div class="card-header text-center mt-2 border-0">
           <i class="bi bi-briefcase fs-1"></i>
         </div>
         <div class="card-body text-center">
@@ -100,9 +103,10 @@
           <p class="card-text lead">MAG 2019 - ATTUALE: Snipes SRL (Foggia)</p>
           <p class="card-text lead">GIU 2018 - SET 2018: CiccioBacco Beach (Margherita di Savoia)</p>
           <p class="card-text lead">LUG 2017 - OTT 2017: T&T Services Italia (Bruxelles)</p>
-          <a href="#" class="btn btn-outline-danger border-0 fs-3"><i class="bi bi-hand-thumbs-up"></i></a>
+          <a href="#" class="btn btn-outline-danger navbar-custom border-0 fs-3"><i class="bi bi-hand-thumbs-up"></i></a>
         </div>
       </div>
+
     </div>    
   </div>
   
@@ -112,23 +116,23 @@
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
       </a>
-      <span class="mb-3 mb-md-0 lead">©Gennaio 2023, Antonio Giannino, Inc</span>
+      <span class="mb-3 mb-md-0 lead">©2023, Antonio Giannino, Inc</span>
     </div>
     
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3 fs-4">
         <a target="_blank" href="https://it-it.facebook.com/">
-          <i class="bi bi-facebook"></i>
+          <i class="bi bi-facebook hover"></i>
         </a> 
       </li>
       <li class="ms-3 fs-4">
         <a target="_blank" href="https://www.instagram.com/">
-          <i class="bi bi-instagram"></i>
+          <i class="bi bi-instagram hover"></i>
         </a>
       </li>
       <li class="ms-3 fs-4 hover pe-5">
-        <a target="_blank" href="https://www.linkedin.com/in/antonio-gianfranco-giannino-3bb2a524a/">
-          <i class="bi bi-linkedin"></i>
+        <a target="_blank" href="https://www.linkedin.com/in/antoniogiannino-webdeveloper/">
+          <i class="bi bi-linkedin hover"></i>
         </a>
       </li>
     </ul>
