--- a/contact_me.html
+++ b/contact_me.html
@@ -68,24 +68,24 @@
     <div class="row navbar-custom my-4 vh-75">
         <div class="col-12 py-3">
             <div class="mt-2">
-                <label for="exampleFormControlInput1" class="form-label font_custom ps-2">YOUR NAME
+                <label for="name" class="form-label font_custom ps-2">YOUR NAME
                 </label>
-                <input type="text" class="form-control navbar-custom borderhover" id="exampleFormControlInput1" placeholder="{}">
+                <input type="text" class="form-control navbar-custom borderhover" id="name" placeholder="{}">
             </div>
             <div class="mt-2">
-                <label for="exampleFormControlInput1" class="form-label font_custom ps-2">YOUR EMAIL
+                <label for="email" class="form-label font_custom ps-2">YOUR EMAIL
                 </label>
-                <input type="email" class="form-control navbar-custom borderhover" id="exampleFormControlInput1" placeholder="{}">
+                <input type="email" class="form-control navbar-custom borderhover" id="email" placeholder="{}">
             </div>
             <div class="mt-2">
-                <label for="exampleFormControlInput1" class="form-label font_custom ps-2">SUBJECT
+                <label for="subject" class="form-label font_custom ps-2">SUBJECT
                 </label>
-                <input type="text" class="form-control navbar-custom borderhover" id="exampleFormControlInput1" placeholder="{}">
+                <input type="text" class="form-control navbar-custom borderhover" id="subject" placeholder="{}">
             </div>
             <div class="mt-2">
-                <label for="exampleFormControlTextarea1" class="form-label font_custom ps-2">YOUR MESSAGE
+                <label for="message" class="form-label font_custom ps-2">YOUR MESSAGE
                 </label>
-                <textarea class="form-control navbar-custom borderhover" id="exampleFormControlTextarea1" rows="5" placeholder="{}"></textarea>
+                <textarea class="form-control navbar-custom borderhover" id="message" rows="5" placeholder="{}"></textarea>
             </div>
             <button class="btn btn-danger navbar-custom borderhover border-0 mt-3">
               <i class="bi bi-envelope-paper fs-5 b"></i>
